# lite-xl-immersive-title

./: CMakeLists.txt  Makefile  README.md  dark_mode_monitor.c  init.lua  monitor.c  monitor.manifest  monitor_res.rc  util.h  winrt_ui_settings.cc  winrt_ui_settings.h
.github/workflows/: build.yml
